classDiagram
%% ============================
%% Domein-entiteiten
%% ============================

    class Job {
        +int JobID
        -string JobNumber
        -datetime JobDate
        -string JobName
        -string Info
    }

    class Cylinder {
        +int CylinderID
        -int CylinderNr
        -string Color
        -string CylinderInfo
    }

    class TapeSpec {
        +int TapeSpecID
        -string TapeName
        -string TapeType
        -int Thickness
        -string Info
    }

    class ReportSpec {
        +int ReportSpecID
        -string ReportName
        -string ReportType
        -int Thickness
        -string Info
    }

    class Report {
        +int ReportID
        -int ReportNr
        -int ReportWidth
        -int XOffset
        -int YOffset
    }

    class Note {
        +int JobID
        -string Info
    }

%% ============================
%% Relaties
%% ============================

Job "1" o-- "0..*" Cylinder : contains
Job "1" o-- "0..1" Note : has

Cylinder "1" --> "1" TapeSpec : uses
Cylinder "1" o-- "0..*" Report : contains

Report "1" --> "1" ReportSpec : uses
